--- a/Net Salary Calculator/styles.css
+++ b/Net Salary Calculator/styles.css
@@ -10,7 +10,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 min-height: 100vh;
-background: url(images/background.jpg);
+background: url(/images/background.jpg);
 font-family: sans-serif;
 }
 .box{
