--- a/Speed Detector/styles.css
+++ b/Speed Detector/styles.css
@@ -10,9 +10,10 @@ display: flex;
 justify-content: center;
 align-items: center;
 min-height: 100vh;
-background: url(images/background.jpg);
+background: url(/images/background1.jpg);
 font-family: sans-serif;
 }
+
 .box{
 width: 320px;
 height: 420px;
@@ -27,10 +28,12 @@ opacity:  0.9;
 transition: opacity 3s, border 2s;
 padding: 70px   30px;
 }
+
 .box:hover{
 opacity: 1;
 border: 9px solid #36454f;
 }
+
 h1{
 margin: 0;
 padding: 0 0 20px;
@@ -38,22 +41,36 @@ text-align: center;
 font-size: 22px;
 font-family: 'Roboto Mono', monospace;  
 }
-.box p{
-margin: 20px auto;
-padding: 0;
-font-family: 'Roboto Mono', monospace;
+
+.box span{
+    position: absolute;
+    left: 10;
+    padding: 20px 0px 10px;
+    color: #8f8f8f;
+    pointer-events: none;
+    font-size: 1em;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
 }
+
 .box input{
 width: 100%;
-margin-bottom: 40px;
-border: none;
-border-bottom:  1px solid #fff;
+position: relative;
+padding: 40px 10px;
 background: transparent;
 outline: none;
-height: 40px;
+border: none;
+box-shadow: none;
 color: #fff;
-font-size: 16px;
+font-size: 1em;
+letter-spacing: 0.05em;
+transition: 0.5s;
+z-index: 10;
+margin-bottom: 40px;
+height: 40px;
+border-bottom: 2px solid #fff;
 }
+
 .box button
 {
 border: none;
@@ -65,6 +82,7 @@ border-radius: 20px;
 width: 320px;
 font-family: 'Roboto Mono', monospace;
 }
+
 .box button:hover
 {
 cursor: pointer;
